<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:id="@+id/MainActivityLayout"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/create_account_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_view"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logogreenflag"
            app:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/text_view0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/museosans_500"
            android:text="@string/text0"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/tick_view0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/tick_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view0"
            app:srcCompat="@drawable/tick"/>

        <TextView
            android:id="@+id/text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/museosans_300"
            android:text="@string/text1"
            android:textColor="@color/white"
            android:textSize="@dimen/size"
            app:layout_constraintBottom_toBottomOf="@+id/tick_view0"
            app:layout_constraintStart_toStartOf="@+id/tick_view0"
            app:layout_constraintTop_toTopOf="@+id/tick_view0"
            app:layout_constraintVertical_bias="0.0"/>

        <ImageView
            android:id="@+id/tick_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/text2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tick_view0"
            app:srcCompat="@drawable/tick" />

        <TextView
            android:id="@+id/text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/museosans_300"
            android:text="@string/text2"
            android:textColor="@color/white"
            android:textSize="@dimen/size"
            app:layout_constraintBottom_toBottomOf="@+id/tick_view1"
            app:layout_constraintStart_toStartOf="@+id/tick_view1"
            app:layout_constraintTop_toTopOf="@+id/tick_view1"/>

        <ImageView
            android:id="@+id/tick_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/text2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tick_view1"
            app:srcCompat="@drawable/tick" />

        <TextView
            android:id="@+id/text_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/museosans_300"
            android:text="@string/text3"
            android:textColor="@color/white"
            android:textSize="@dimen/size"
            app:layout_constraintBottom_toBottomOf="@+id/tick_view2"
            app:layout_constraintStart_toStartOf="@+id/tick_view2"
            app:layout_constraintTop_toTopOf="@+id/tick_view2"
            app:layout_constraintVertical_bias="0.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/create_account_btn"
        android:onClick="createAccount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_account_btn"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/museosans_300"
        android:textAllCaps="false"
        android:background="@drawable/gradient_button_background"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>