<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SecondActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SecondActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_bar"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="41dp"
        android:background="@color/gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="130dp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_input_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/museosans_300"
                android:text="@string/email_input"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize" />

            <AutoCompleteTextView
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:completionThreshold="2"
                android:ems="10"
                android:fontFamily="@font/museosans_300"
                android:hint="@string/email_input_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/password_input_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/museosans_300"
                android:text="@string/password_input"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/museosans_300"
                android:hint="@string/password_input_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/password_confirm_input_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/museosans_300"
                android:text="@string/password_confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize" />

            <EditText
                android:id="@+id/password_confirm_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/museosans_300"
                android:hint="@string/password_confirm_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/museosans_300"
                android:text="@string/password_criteria"
                android:textColor="@color/white"
                android:textSize="@dimen/size" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="48dp"
                android:onClick="wipeData"
                android:text="Wipe shared preference"
                android:textColor="@color/teal_200"/>

        </LinearLayout>
    </ScrollView>

    <android.widget.Button
        android:id="@+id/register_btn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="63dp"
        android:background="@drawable/gradient_button_background"
        android:enabled="false"
        android:fontFamily="@font/museosans_300"
        android:onClick="registerInfo"
        android:text="@string/create_account_done_btn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"/>
</androidx.constraintlayout.widget.ConstraintLayout>